# laaba

./: CMakeLists.txt  main.cpp
.github/workflows/: linux.yml  release.yml
